# nixpkgs-python-importer

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py  shell.nix
nixpkgs/: __init__.py
