[metadata]
name = nixpkgs
author = Alexander Sosedkin
author-email = monk@unboiled.info
summary = Abuses Nix philosophy, allowing me to do `from nixpkgs import scipy` anytime
description-file = README.md
home-page = https://github.com/t184256/nixpkgs-python-importer
license = MIT
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
keywords =
    nix
    nixos
    nixpkgs
    importlib
requires-python = >=3.6
setup_requires_dist =
    pbr>=1.9
    setuptools>=17.1
